--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ logging.level.org.springframework.batch.item.database=DEBUG
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=a75eedd3a3447d
-spring.mail.password=eb73c5e6c9aad1
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.startt.enable=true
 
